--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,11 @@ select {
   left: 30px;
 }
 
+.standings-link {
+  position: relative;
+  left: 30px;
+}
+
 #team-form{
   padding: 15px;
   list-style: none;
@@ -54,13 +59,13 @@ select {
 .player-points{
   list-style: none;
   position: absolute;
-  left: 150px;
+  left: 265px;
   top: 0px;
 }
 
 .player-point {
   float:left;
-  width: 25px;
+  width: 20px;
   text-align: right;
   padding: 5px;
 }
@@ -84,7 +89,7 @@ select {
 
 .team-total {
   position: absolute;
-  left: 535px;
+  left: 650px;
   top: 0px;
 }
 
