--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,7 @@ select {
 }
 
 .player {
+  font-size: 13px;
   width: 480px;
   list-style:none;
   position: relative;
@@ -83,11 +84,14 @@ select {
 }
 
 .team li{
-  font-size: 18px;
 }
 
+.team-title {
+  font-size: 16px;
+}
 
 .team-total {
+  font-size: 16px;
   position: absolute;
   left: 650px;
   top: 0px;
