adding hide players button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,13 @@ select {
   left: 30px;
 }
 
+.showhide {
+}
+
+.updated {
+  display: inline;
+}
+
 .standings-link {
   position: relative;
   left: 30px;
