--- a/public/css/draft.css
+++ b/public/css/draft.css
@@ -3,14 +3,20 @@ body { background: #BDBDBD; }
 .chat { height: 100%; overflow-y: auto;}
 .chat-timestamp { padding-right: 5px; font-size: smaller;} 
 #team-list { height: 90%; overflow-y: auto;}
+#team-list table tr {height : 14px;}
+#team-list table thead tr {font-size: 14px;}
+#team-list table tbody tr {font-size: 10px;}
+
 #player-list { height: 100%; overflow-y: auto;}
+
 .team-row { height: 35%}
-.chat-row {height: 45%}
+.chat-row { height: 45%}
 .table-light { background-color: #F9F9F9}
 .table-hover tbody tr:hover td,
 .table-hover tbody tr:hover th {
   background-color: #CFCFCF;
 }
+
 .template { display: none;}
 .draft-player i, .draft-player span { vertical-align: middle; }
-.draft-player i { padding-right: 5px;}
+.draft-player i { padding-right: 5px; cursor: pointer;}
