--- a/public/css/draft.css
+++ b/public/css/draft.css
@@ -11,6 +11,7 @@ body { background: #BDBDBD; }
 #team-list .round-num { width: 1em; }
 .current-pick { background-color: yellow;}
 
+#player-search { margin-bottom: 5px;}
 #player-list { height: 100%; overflow-y: auto;}
 #player-list thead td { border:none;}
 #player-list td { border-left:none;}
