--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,15 @@
   margin-bottom: 0px;
 }
 
+.navbar .brand {
+  font-size: 24px;
+  padding-right: 25px;
+}
+
+.navbar .dropdown {
+  font-size: smaller;
+}
+
 .updated {
   padding-left: 10px;
   font-size: smaller;
