--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ body {
   font-size: larger;
 }
 
-.current {
+.current .player-total-row, .current .player-game:last-child {
   background: rgb(255, 216, 94);
 } 
 
