--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,11 @@ body {
     color: black;
 }
 
+.super-captain {
+    background: lime !important;
+    color: black;
+}
+
 .player-round {
   font-size: small;
 }
